# benchmark

./: CMakeLists.txt  Makefile  README.md
examples/: example_http.sh  example_ws.sh
include/: http_test.h  utils.h  websocket_test.h
src/: http_test.c  utils.c  websocket_test.c
tests/: test_http.c  test_websocket.c
